--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start:dev": "tsx watch src/index.ts"
+    "start:dev": "tsx watch src/server.ts",
+    "start": "node build/server.js",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.2.2",
-    "eslint": "^8.57.1",
-    "tsup": "^8.3.5",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "@rocketseat/eslint-config": "2.2.2",
+    "@types/node": "22.9.0",
+    "eslint": "8.57.1",
+    "tsup": "8.3.5",
+    "tsx": "4.19.2",
+    "typescript": "5.6.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "dotenv": "^16.4.5",
-    "fastify": "^5.1.0"
+    "@prisma/client": "5.22.0",
+    "dotenv": "16.4.5",
+    "fastify": "5.1.0"
   }
 }
