--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "5.22.0",
     "dotenv": "16.4.5",
-    "fastify": "5.1.0"
+    "fastify": "5.1.0",
+    "zod": "3.23.8"
   }
 }
