--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.9.0",
     "eslint": "8.57.1",
     "tsup": "8.3.5",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.22.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "fastify": "5.1.0",
     "zod": "3.23.8"
