--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest --dir src/use-cases",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest run --dir src/http",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
@@ -27,6 +28,7 @@
     "@vitest/ui": "2.1.5",
     "eslint": "8.57.1",
     "npm-run-all": "4.1.5",
+    "supertest": "7.0.0",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.6.3",
