--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -31,5 +31,5 @@ jobs:
       - run: npm run test:e2e
         env:
           JWT_SECRET: testing
-          DATABASE_URL: "postgresql://docker:docker@localhost:5432/api-solid?schema=public"
+          DATABASE_URL: "postgresql://docker:docker@localhost:5432/find-friend?schema=public"
 
