--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npm ci
 
       - run: npm run test:e2e
-        environment:
+        env:
           JWT_SECRET: testing
-          DATABASE_URL: "postgresql://docker:docker@localhost:5432/api-solid?schema=public"
+          DATABASE_URL: "postgresql://docker:docker@localhost:5432/find-friend?schema=public"
 
